--- a/src/pages/layout.css
+++ b/src/pages/layout.css
@@ -8,14 +8,16 @@
 .layout-bottom {
 
     display: flex;
-    gap: 10px;
     align-items: center;
-    justify-content: space-between;
-    padding: 12px 18px;
-    /* width: fit-content; */
+    width: fit-content;
+    margin: 0 auto;
+    border-radius: 21px;
+    border: 1px solid #800080;
+    gap: 25px;
+    padding: 19px 36px;
     position: sticky;
     /* top: calc(100vh - 114px); */
-    bottom: 0;
+    bottom: 25px;
     z-index: 100;
     background: var(--Color-2, #FFF);
     box-shadow: 0px 4px 13.4px 0px rgba(0, 0, 0, 0.25);
@@ -28,11 +30,28 @@ body {
 }
 
 .proceed.layout-proceed {
-    padding: 16px 20px;
+    padding: 20px 38px;
 }
 
-@media (width>580px) {
+@media (width<580px) {
     .layout-bottom {
-        display: none;
+
+        display: flex;
+        gap: 10px;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+        border-radius: 0px;
+        border: none;
+        padding: 12px 18px;
+        position: sticky;
+        bottom: 0px;
+        z-index: 100;
+        background: var(--Color-2, #FFF);
+        box-shadow: 0px 4px 13.4px 0px rgba(0, 0, 0, 0.25);
+    }
+
+    .proceed.layout-proceed {
+        padding: 16px 20px;
     }
 }
