--- a/src/styles/courses.css
+++ b/src/styles/courses.css
@@ -27,7 +27,7 @@
     flex-wrap: wrap;
     row-gap: 16px;
     column-gap: 20px;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
 
 .course-div-outer {
