--- a/src/styles/refund.css
+++ b/src/styles/refund.css
@@ -34,6 +34,7 @@
     flex-direction: column;
     gap: 15px;
     max-width: 550px;
+    justify-self: center;
     margin-left: 50px;
 }
 
@@ -110,7 +111,7 @@
     align-items: center;
     flex-direction: column;
     gap: 40px;
-    margin: 0 auto;
+    /* margin: 0 auto; */
 }
 
 .bor-bottom {
