--- a/src/global.css
+++ b/src/global.css
@@ -4,108 +4,108 @@
 }
 
 
-.text-black {
+.upg-pag-text-black {
     color: black;
 }
 
-.text-white {
+.upg-pag-text-white {
     color: white;
 }
 
-.text-pink {
+.upg-pag-text-pink {
     color: #800080;
 }
 
-.text-light-pink {
+.upg-pag-text-light-pink {
     color: var(--800080, rgba(128, 0, 128, 0.87));
 
 }
 
-.bg-light-pink {
+.upg-pag-bg-light-pink {
     background: rgba(128, 0, 128, 0.87);
 
 }
 
-.wood-smoke-950 {
+.upg-pag-wood-smoke-950 {
     color: var(--Woodsmoke-950);
 }
 
-.text-light-black {
+.upg-pag-text-light-black {
     color: var(--light-black);
 }
 
-.f-55 {
+.upg-pag-f-55 {
     font-size: 55px;
 }
 
-.f-34 {
+.upg-pag-f-34 {
     font-size: 34px;
 }
 
-.td-lt {
+.upg-pag-td-lt {
     text-decoration: line-through;
 }
 
-.f-20 {
+.upg-pag-f-20 {
     font-size: 20px;
 }
 
-.f-48 {
+.upg-pag-f-48 {
     font-size: 48px;
 }
 
-.f-18 {
+.upg-pag-f-18 {
     font-size: 18px;
 }
 
-.f-16 {
+.upg-pag-f-16 {
     font-size: 16px;
 }
 
-.fw-400 {
+.upg-pag-fw-400 {
     font-weight: 400;
 }
 
-.fw-500 {
+.upg-pag-fw-500 {
     font-weight: 500;
 }
 
-.fw-600 {
+.upg-pag-fw-600 {
     font-weight: 600;
 }
 
-.fw-700 {
+.upg-pag-fw-700 {
     font-weight: 700;
 }
 
-.fw-800 {
+.upg-pag-fw-800 {
     font-weight: 800;
 }
 
-.fw-900 {
+.upg-pag-fw-900 {
     font-weight: 900;
 }
 
-.va-mid {
+.upg-pag-va-mid {
     vertical-align: middle;
 }
 
-.section {
+.upg-pag-section {
     max-width: 1440px;
     margin: 0 auto;
 }
 
-.section {
+.upg-pag-section {
     padding: 64px 64px;
 
 }
 
-.text-center {
+.upg-pag-text-center {
     text-align: center;
 }
 
 @media (width>1280px) {
-    .section {
+    .upg-pag-section {
         max-width: 100%;
     }
 
@@ -113,27 +113,27 @@
 }
 
 @media (width<1280px) {
-    .section {
+    .upg-pag-section {
         padding: 64px 64px;
     }
 
-    .f-55 {
+    .upg-pag-f-55 {
         font-size: 50px;
     }
 }
 
 @media (width<1180px) {
-    .f-55 {
+    .upg-pag-f-55 {
         font-size: 42px;
     }
 }
 
 @media (width<980px) {
-    .section {
+    .upg-pag-section {
         padding: 64px 32px;
     }
 
-    .f-55 {
+    .upg-pag-f-55 {
         font-size: 45px;
 
     }
@@ -141,59 +141,59 @@
 }
 
 @media (width<780px) {
-    .section {
+    .upg-pag-section {
         padding: 64px 32px;
     }
 
-    .f-16 {
+    .upg-pag-f-16 {
         font-size: 15px;
     }
 
-    .f-18 {
+    .upg-pag-f-18 {
         font-size: 15px;
     }
 
 
-    .f-48 {
+    .upg-pag-f-48 {
         font-size: 38px;
     }
 
 }
 
 @media (width<580px) {
-    .f-34 {
+    .upg-pag-f-34 {
         font-size: 24px;
     }
 }
 
 @media (width<480px) {
-    .section {
+    .upg-pag-section {
         padding: 48px 16px;
     }
 
-    .f-55 {
+    .upg-pag-f-55 {
         font-size: 35px;
     }
 
-    .f-48 {
+    .upg-pag-f-48 {
         font-size: 28px;
     }
 
-    .f-16 {
+    .upg-pag-f-16 {
         font-size: 14px;
     }
 
-    .f-18 {
+    .upg-pag-f-18 {
         font-size: 12px;
     }
 
-    .f-34 {
+    .upg-pag-f-34 {
         font-size: 16px;
     }
 }
 
 /* @media (width<400px) {
-    .section {
+    .upg-pag-section {
         padding: 48px 12px;
     }
 } */
