--- a/src/pages/layout.css
+++ b/src/pages/layout.css
@@ -1,11 +1,11 @@
-.layout {
+.upg-pag-layout {
     width: 100%;
     overflow: hidden;
     min-height: 100vh;
     position: relative;
 }
 
-.layout-bottom {
+.upg-pag-layout-bottom {
 
     display: flex;
     align-items: center;
@@ -29,12 +29,12 @@ body {
     position: relative;
 }
 
-.proceed.layout-proceed {
+.upg-pag-proceed.upg-pag-layout-proceed {
     padding: 20px 38px;
 }
 
 @media (width<580px) {
-    .layout-bottom {
+    .upg-pag-layout-bottom {
 
         display: flex;
         gap: 10px;
@@ -51,7 +51,7 @@ body {
         box-shadow: 0px 4px 13.4px 0px rgba(0, 0, 0, 0.25);
     }
 
-    .proceed.layout-proceed {
+    .upg-pag-proceed.upg-pag-layout-proceed {
         padding: 16px 20px;
     }
 }
