--- a/src/styles/courses.css
+++ b/src/styles/courses.css
@@ -1,11 +1,11 @@
-.courses {
+.upg-pag-courses {
     margin-top: 34px;
     display: flex;
     flex-direction: column;
     gap: 45px;
 }
 
-.course-heading {
+.upg-pag-course-heading {
     color: var(--Woodsmoke-700, #4C4D52);
     /* text-align: center; */
     font-family: Poppins;
@@ -16,13 +16,13 @@
     /* 41.6px */
 }
 
-.course {
+.upg-pag-course {
     display: flex;
     flex-direction: column;
     gap: 24px;
 }
 
-.course-div {
+.upg-pag-course-div {
     display: flex;
     flex-wrap: wrap;
     row-gap: 16px;
@@ -30,6 +30,6 @@
     /* justify-content: space-between; */
 }
 
-.course-div-outer {
+.upg-pag-course-div-outer {
     margin: 0 auto;
 }
