--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -1,4 +1,4 @@
-.hero-top {
+.upg-pag-hero-top {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 45px;
@@ -7,12 +7,12 @@
     width: 100%;
 }
 
-section.hero-section {
+section.upg-pag-hero-section {
     position: relative;
     padding-top: 24px;
 }
 
-.hero-design {
+.upg-pag-hero-design {
     position: absolute;
     top: 0;
     right: -100px;
@@ -23,30 +23,30 @@ section.hero-section {
     width: 500px;
 }
 
-.hero-heading {
+.upg-pag-hero-heading {
     line-height: 1.2;
 }
 
-.hero-top-para {
+.upg-pag-hero-top-para {
     max-width: 351px;
     margin-top: 12px;
     font-size: 18px;
 }
 
-.ht-left {
+.upg-pag-ht-left {
     max-width: 600px;
     margin: 0 auto;
 }
 
-.htl-bottom {
+.upg-pag-htl-bottom {
     margin-top: 54px;
 }
 
-.hero-top {
+.upg-pag-hero-top {
     margin-bottom: 50px;
 }
 
-.hero-middle {
+.upg-pag-hero-middle {
     border-radius: 21px;
     border: 1px solid #800080;
     display: flex;
@@ -57,7 +57,7 @@ section.hero-section {
     width: fit-content;
 }
 
-.hero-bottom {
+.upg-pag-hero-bottom {
     display: grid;
     width: 100%;
     max-width: 1440px;
@@ -69,18 +69,18 @@ section.hero-section {
     gap: 27px;
 }
 
-.hb-card {
+.upg-pag-hb-card {
     height: 100%;
 }
 
-.hb-card-1 {
+.upg-pag-hb-card-1 {
     border-radius: 28px;
     background: var(--Eminence-950, #450D45);
     box-shadow: 0px 4px 25.3px 0px rgba(137, 137, 137, 0.25);
     padding: 46px 32px;
 }
 
-.hb-card-2 {
+.upg-pag-hb-card-2 {
     border-radius: 28px;
     padding: 46px 32px;
     display: flex;
@@ -89,14 +89,14 @@ section.hero-section {
     background: var(--Linear, linear-gradient(100deg, #B1B1B1 0.89%, #BDBDBD 9.58%, #EBE6E6 26.9%, #FFF 44.84%, #F0F0F0 64.21%, #CBCBCB 84.67%, #BEBEBE 102.86%));
 }
 
-.hero-card-inner {
+.upg-pag-hero-card-inner {
     display: flex;
     flex-direction: column;
     gap: 11px;
 
 }
 
-.select-course-btn {
+.upg-pag-select-course-btn {
     display: flex;
     padding: 20px 0px;
     justify-content: center;
@@ -114,7 +114,7 @@ section.hero-section {
     /* 22.23px */
 }
 
-.hero-card2-heading {
+.upg-pag-hero-card2-heading {
     color: #000;
     text-align: center;
     font-family: Poppins;
@@ -125,7 +125,7 @@ section.hero-section {
     /* 48px */
 }
 
-.hero-card1-heading {
+.upg-pag-hero-card1-heading {
     color: var(--Color-2, #FFF);
     text-align: center;
     font-family: Poppins;
@@ -136,7 +136,7 @@ section.hero-section {
     /* 48px */
 }
 
-.hb-card-inner1 {
+.upg-pag-hb-card-inner1 {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -144,7 +144,7 @@ section.hero-section {
 
 }
 
-.hb-card-inner2 {
+.upg-pag-hb-card-inner2 {
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -152,7 +152,7 @@ section.hero-section {
 
 }
 
-.hero-card1-para {
+.upg-pag-hero-card1-para {
     display: flex;
     justify-content: start;
     align-items: center;
@@ -161,7 +161,7 @@ section.hero-section {
     gap: 9px;
 }
 
-.hero-card2-para {
+.upg-pag-hero-card2-para {
     display: flex;
     justify-content: start;
     align-items: center;
@@ -170,25 +170,25 @@ section.hero-section {
     gap: 9px;
 }
 
-.hero-card1-para>svg {
+.upg-pag-hero-card1-para>svg {
     width: 42px;
     height: 42px;
 }
 
-.proceed {
+.upg-pag-proceed {
     border-radius: 7.998px;
     background: #800080;
     box-shadow: 0px 4.279px 9.521px 0px rgba(0, 0, 0, 0.25);
     padding: 20px 38px;
 }
 
-.htl-bottom-left {
+.upg-pag-htl-bottom-left {
     display: flex;
     align-items: center;
     gap: 33px;
 }
 
-.enroll-now {
+.upg-pag-enroll-now {
     display: flex;
     padding: 20px 49px;
     justify-content: center;
@@ -207,18 +207,22 @@ section.hero-section {
     box-shadow: 0px 4.279px 9.521px 0px rgba(0, 0, 0, 0.25);
 }
 
-.ht-left {
+.upg-pag-ht-left {
     width: 100%;
 }
 
-.ht-right>img {
+.upg-pag-ht-right>img {
     width: 100%;
+}
+
+.upg-pag-price-cut {
+    font-size: 20px;
 }
 
 @media (width<1280px) {}
 
 @media (width<1080px) {
-    .hero-bottom {
+    .upg-pag-hero-bottom {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr;
         max-width: 600px;
@@ -227,83 +231,95 @@ section.hero-section {
 }
 
 @media (width<980px) {
-    .hero-top {
+    .upg-pag-hero-top {
         grid-template-rows: fit-content fit-content;
         grid-template-columns: 1fr;
     }
 
-    .ht-left {
+    .upg-pag-ht-left {
         margin: 0;
         grid-row: 2/3;
+    }
+
+    .upg-pag-price-cut {
+        font-size: 18px;
     }
 }
 
 @media (width<780px) {}
 
 @media (width<580px) {
-    .hero-middle {
+    .upg-pag-hero-middle {
         display: none;
     }
 
-    .hero-design {
+    .upg-pag-hero-design {
         height: 300px;
         width: 500px;
     }
 
-    .select-course-btn {
+    .upg-pag-price-cut {
         font-size: 16px;
     }
 
-    .hero-bottom {
+    .upg-pag-select-course-btn {
+        font-size: 16px;
+    }
+
+    .upg-pag-hero-bottom {
         margin-top: 40px;
     }
 
-    .hero-card1-heading,
-    .hero-card2-heading {
+    .upg-pag-hero-card1-heading,
+    .upg-pag-hero-card2-heading {
         font-size: 32px;
     }
 
-    .hero-card1-para,
-    .hero-card2-para {
+    .upg-pag-hero-card1-para,
+    .upg-pag-hero-card2-para {
         font-size: 20px;
     }
 }
 
 @media (width<480px) {
 
-    .hero-card1-heading,
-    .hero-card2-heading {
+    .upg-pag-hero-card1-heading,
+    .upg-pag-hero-card2-heading {
         font-size: 24px;
     }
 
-    .hero-card1-para,
-    .hero-card2-para {
+    .upg-pag-price-cut {
+        font-size: 14px;
+    }
+
+    .upg-pag-hero-card1-para,
+    .upg-pag-hero-card2-para {
         font-size: 16px;
     }
 
-    .enroll-now {
+    .upg-pag-enroll-now {
         padding: 20px;
     }
 
-    .htl-bottom-left {
+    .upg-pag-htl-bottom-left {
         gap: 25px;
     }
 
-    .hb-card {
+    .upg-pag-hb-card {
         padding: 28px 12px;
     }
 
-    .hb-card-inner1 {
+    .upg-pag-hb-card-inner1 {
         gap: 16px;
     }
 }
 
 @media (width<360px) {
-    section.hero-section {
+    section.upg-pag-hero-section {
         padding: 48px 9px;
     }
 
-    .hero-heading {
+    .upg-pag-hero-heading {
         font-size: 32px;
     }
 }
