--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -1,4 +1,4 @@
-.navbar {
+.upg-pag-navbar {
     /* max-width: 1440px; */
     margin: 0 auto;
     height: 100px;
@@ -9,28 +9,28 @@
     justify-content: space-between;
 }
 
-.logo-small {
+.upg-pag-logo-small {
     display: none;
 }
 
-.nav-left {
+.upg-pag-nav-left {
     display: flex;
     align-items: center;
 }
 
 
-.nav-btn {
+.upg-pag-nav-btn {
     display: flex;
     align-items: center;
     gap: 11px;
     padding-right: 100px;
 }
 
-.nav-left {
+.upg-pag-nav-left {
     padding-left: 100px;
 }
 
-.nav-login-btn {
+.upg-pag-nav-login-btn {
     text-align: center;
     font-family: Poppins;
     font-size: 16px;
@@ -52,7 +52,7 @@
     box-shadow: 0px 4.279px 9.521px 0px rgba(0, 0, 0, 0.25);
 }
 
-.nav-signup-btn {
+.upg-pag-nav-signup-btn {
     display: flex;
     padding: 14px 41px;
     justify-content: center;
@@ -72,58 +72,58 @@
 
 
 @media (width<1180px) {
-    .nav-btn {
+    .upg-pag-nav-btn {
         padding-right: 32px;
     }
 
-    .nav-left {
+    .upg-pag-nav-left {
         padding-left: 32px;
     }
 }
 
 @media (width<980px) {
 
-    .nav-btn {
+    .upg-pag-nav-btn {
         padding-right: 16px;
     }
 
-    .nav-left {
+    .upg-pag-nav-left {
         padding-left: 16px;
     }
 
-    .nav-list {
+    .upg-pag-nav-list {
         display: none;
     }
 }
 
 @media (width<780px) {
-    .nav-btn {
+    .upg-pag-nav-btn {
         padding: 0;
     }
 
-    .nav-left {
+    .upg-pag-nav-left {
         padding-left: 0px;
     }
 
-    .nav-login-btn {
+    .upg-pag-nav-login-btn {
         font-size: 12px;
         padding: 8.5px 27px;
     }
 
-    .nav-signup-btn {
+    .upg-pag-nav-signup-btn {
         font-size: 12px;
         padding: 8.5px 20px;
     }
 
-    .navbar {
+    .upg-pag-navbar {
         height: 72px;
     }
 
-    .logo-large {
+    .upg-pag-logo-large {
         display: none;
     }
 
-    .logo-small {
+    .upg-pag-logo-small {
         display: inline;
     }
 
@@ -132,8 +132,8 @@
 
 @media (width<355px) {
 
-    .nav-login-btn,
-    .nav-signup-btn {
+    .upg-pag-nav-login-btn,
+    .upg-pag-nav-signup-btn {
         padding: 8.5px 12px;
     }
 }
