--- a/src/styles/refund.css
+++ b/src/styles/refund.css
@@ -1,4 +1,4 @@
-.backoffer {
+.upg-pag-backoffer {
     width: 100%;
     height: 100%;
     background: var(--Eminence-950, #450D45);
@@ -9,11 +9,11 @@
     gap: 64px;
 }
 
-.back-offer-heading {
+.upg-pag-back-offer-heading {
     line-height: 1.2;
 }
 
-.backoffer-bottom {
+.upg-pag-backoffer-bottom {
     display: flex;
     justify-content: center;
     gap: 50px;
@@ -21,15 +21,15 @@
 
 }
 
-.text-white {
+.upg-pag-text-white {
     color: white;
 }
 
-.text-center {
+.upg-pag-text-center {
     text-align: center;
 }
 
-.backoffer-left {
+.upg-pag-backoffer-left {
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -38,7 +38,7 @@
     margin-left: 50px;
 }
 
-.bol-card {
+.upg-pag-bol-card {
     border-radius: 11.936px;
     background: var(--Linear, linear-gradient(100deg, #B1B1B1 0.89%, #BDBDBD 9.58%, #EBE6E6 26.9%, #FFF 44.84%, #F0F0F0 64.21%, #CBCBCB 84.67%, #BEBEBE 102.86%));
     max-width: 503px;
@@ -51,7 +51,7 @@
     padding-left: 65px;
 }
 
-.bol-card-heading {
+.upg-pag-bol-card-heading {
     color: var(--800080, rgba(128, 0, 128, 0.87));
     font-family: Poppins;
     font-size: 30px;
@@ -61,7 +61,7 @@
     /* 35.55px */
 }
 
-.bol-card-text {
+.upg-pag-bol-card-text {
     color: #000;
     font-family: Poppins;
     font-size: 20px;
@@ -71,7 +71,7 @@
     max-width: 300px;
 }
 
-.bol-card-right {
+.upg-pag-bol-card-right {
     color: var(--800080, rgba(128, 0, 128, 0.87));
     font-family: Poppins;
     font-size: 77.617px;
@@ -86,7 +86,7 @@
     bottom: -20px;
 }
 
-.bol-card-left {
+.upg-pag-bol-card-left {
     display: flex;
     width: 103.442px;
     height: 103.442px;
@@ -103,7 +103,7 @@
     z-index: 10;
 }
 
-.backoffer-right {
+.upg-pag-backoffer-right {
     max-width: 517px;
 
     display: flex;
@@ -114,17 +114,17 @@
     /* margin: 0 auto; */
 }
 
-.bor-bottom {
+.upg-pag-bor-bottom {
     gap: 10px;
     display: flex;
     flex-direction: column;
 }
 
-.bor-top>img {
+.upg-pag-bor-top>img {
     width: 100%;
 }
 
-.refund-right-para {
+.upg-pag-refund-right-para {
     color: var(--Color-2, #FFF);
     font-family: Poppins;
     font-size: 24px;
@@ -136,50 +136,50 @@
     gap: 15px;
 }
 
-.bol-small-screen {
+.upg-pag-bol-small-screen {
     display: none;
 }
 
-.refund-small-screen {
+.upg-pag-refund-small-screen {
     display: none;
 }
 
 @media (width<980px) {
-    .backoffer-bottom {
+    .upg-pag-backoffer-bottom {
         flex-direction: column-reverse;
     }
 
-    .refund-small-screen {
+    .upg-pag-refund-small-screen {
         display: flex;
     }
 
-    .backoffer-right {
+    .upg-pag-backoffer-right {
         gap: 35px;
     }
 }
 
 @media (width<780px) {
-    .text-center {
+    .upg-pag-text-center {
         text-align: left;
     }
 
-    .f-48 {
+    .upg-pag-f-48 {
         font-size: 39px;
     }
 
-    .bol-card-heading {
+    .upg-pag-bol-card-heading {
         font-size: 25px;
     }
 
-    .bol-card-text {
+    .upg-pag-bol-card-text {
         font-size: 18px;
     }
 
-    .bol-card-right {
+    .upg-pag-bol-card-right {
         font-size: 60px;
     }
 
-    .backoffer {
+    .upg-pag-backoffer {
         padding: 56px 32px;
     }
 
@@ -187,84 +187,84 @@
 }
 
 @media (width<580px) {
-    svg.va-mid {
+    svg.upg-pag-va-mid {
         width: 21.386px;
         height: 12.221px;
     }
 
-    .bol-small-screen {
+    .upg-pag-bol-small-screen {
         display: block;
 
     }
 
-    .bol-large-screen {
+    .upg-pag-bol-large-screen {
         display: none;
     }
 
-    .backoffer-left {
+    .upg-pag-backoffer-left {
         margin-left: 35px;
 
     }
 
-    .refund-right-para {
+    .upg-pag-refund-right-para {
         font-size: 20px;
     }
 
-    .f-48 {
+    .upg-pag-f-48 {
         font-size: 30px;
     }
 
-    .bor-bottom {
+    .upg-pag-bor-bottom {
         gap: 7px;
     }
 
-    .bol-card-left {
+    .upg-pag-bol-card-left {
         /* padding: 10px; */
         width: 70px;
         height: 70px;
     }
 
-    .bol-card-left>img {
+    .upg-pag-bol-card-left>img {
         width: 70px;
         height: 70px;
     }
 
-    .bol-card {
+    .upg-pag-bol-card {
         padding: 16px 12px 16px 40px;
     }
 
-    .bol-card-left {
+    .upg-pag-bol-card-left {
         left: -35px;
     }
 
-    .backoffer-right {
+    .upg-pag-backoffer-right {
         padding: 10px;
     }
 
-    .backoffer-right-inner {
+    .upg-pag-backoffer-right-inner {
         padding: 20px;
     }
 
-    .bol-card-text {
+    .upg-pag-bol-card-text {
         font-size: 16px;
     }
 
-    .bol-card-heading {
+    .upg-pag-bol-card-heading {
         font-size: 20px;
     }
 
-    .bol-card-right {
+    .upg-pag-bol-card-right {
         font-size: 50px;
         bottom: -10px;
     }
 
-    .backoffer {
+    .upg-pag-backoffer {
         padding: 56px 16px;
     }
 }
 
 @media (width<480px) {
-    .refund-right-para {
+    .upg-pag-refund-right-para {
         font-size: 16px;
     }
 
