--- a/src/styles/testimonials.css
+++ b/src/styles/testimonials.css
@@ -1,19 +1,19 @@
-.testimonial-heading {
+.upg-pag-testimonial-heading {
     line-height: 1.2;
     padding-left: 64px;
 }
 
-.section-testimonial {
+.upg-pag-section-testimonial {
     display: block;
 }
 
-.slider-container {
+.upg-pag-slider-container {
     margin-top: 48px;
     width: 100%;
     gap: 26px;
 }
 
-.outer-testimonial-card {
+.upg-pag-outer-testimonial-card {
     display: flex;
     height: 100%;
     max-width: 580px;
@@ -30,7 +30,7 @@
     /* gap: 20px; */
 }
 
-.slick-slider {
+.-slick-slider {
     justify-content: center;
 }
 
@@ -40,7 +40,7 @@
     width: 100%;
 }
 
-.testimonial-card {
+.upg-pag-testimonial-card {
     display: flex;
     padding: 15px;
     gap: 26px;
@@ -61,14 +61,14 @@
     align-items: center;
 }
 
-.testimonial-card-top {
+.upg-pag-testimonial-card-top {
     /* gap: 100px; */
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.tct-l {
+.upg-pag-tct-l {
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -76,11 +76,11 @@
 
 }
 
-.tct-r {
+.upg-pag-tct-r {
     height: 100%;
 }
 
-.tct-about {
+.upg-pag-tct-about {
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -88,7 +88,7 @@
     gap: 12px;
 }
 
-.tct-name {
+.upg-pag-tct-name {
     color: var(--black, #000);
     font-family: "Source Sans 3";
     font-size: 25.264px;
@@ -99,7 +99,7 @@
     opacity: 0.9;
 }
 
-.testimonial-card-bottom {
+.upg-pag-testimonial-card-bottom {
     color: var(--black, #000);
     font-family: "Source Sans 3";
     font-size: 16.843px;
@@ -110,7 +110,7 @@
     opacity: 0.8;
 }
 
-.tct-icon {
+.upg-pag-tct-icon {
     width: 104.811px;
     height: 104.811px;
     flex-shrink: 0;
@@ -129,26 +129,26 @@
 }
 
 @media (width<1080px) {
-    .tct-icon {
+    .upg-pag-tct-icon {
         width: 80px;
         height: 80px;
         font-size: 40px;
     }
 
-    .tct-name {
+    .upg-pag-tct-name {
         font-size: 22px;
     }
 
-    .tct-r>svg {
+    .upg-pag-tct-r>svg {
         width: 60px;
         height: 60px;
     }
 
-    .testimonial-card-bottom {
+    .upg-pag-testimonial-card-bottom {
         font-size: 14px;
     }
 
-    .outer-testimonial-card {
+    .upg-pag-outer-testimonial-card {
         padding: 12px;
     }
 }
@@ -160,55 +160,55 @@
         width: 100%;
     }
 
-    /* .testimonial-card {
+    /* .upg-pag-testimonial-card {
     } */
 
 }
 
 @media (width<780px) {
-    .outer-testimonial-card {
+    .upg-pag-outer-testimonial-card {
         max-width: unset;
     }
 
-    .testimonial-heading {
+    .upg-pag-testimonial-heading {
         padding-left: 0;
     }
 }
 
 @media (width<480px) {
-    .outer-testimonial-card {
+    .upg-pag-outer-testimonial-card {
         padding: 4px;
     }
 
-    .testimonial-card {
+    .upg-pag-testimonial-card {
         margin-right: 0;
         margin-left: 0;
         gap: 12px;
         padding: 8px;
     }
 
-    .tct-r>svg {
+    .upg-pag-tct-r>svg {
         width: 55px;
         height: 55px;
     }
 
-    .tct-name {
+    .upg-pag-tct-name {
         font-size: 14px;
         max-width: 85px;
         text-wrap: wrap;
     }
 
-    .tct-icon {
+    .upg-pag-tct-icon {
         width: 60px;
         height: 60px;
         font-size: 34px;
     }
 
-    .tct-about {
+    .upg-pag-tct-about {
         gap: 5px;
     }
 
-    .testimonial-card-bottom {
+    .upg-pag-testimonial-card-bottom {
         font-size: 10px;
     }
 }
